--- a/package.json
+++ b/package.json
@@ -3,20 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
-  },
-  "scripts": 
-  {
-    "build": "webpack",
-    "start": "webpack-dev-server"
-  },
-  "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "bootstrap": "^3.3.7",
+    "fable": "^1.0.1",
+    "fable-core": "^0.7.26",
+    "fable-powerpack": "0.0.19",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "victory": "^0.17.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
-  }
+  },
+  "scripts": {
+    "build": "fable && webpack",
+    "start": "webpack-dev-server"
+  },
+  "devDependencies": {}
 }
